spa-1410. Pass tile overflow fix.

--- a/src/app/pass-tile/pass-tile.component.scss
+++ b/src/app/pass-tile/pass-tile.component.scss
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     color: white;
-    overflow: hidden;
+    overflow: visible;
     font-style: normal;
     font-stretch: normal;
     /* line-height: 1.08;
